--- a/bbcfont/bbcsansbold.css
+++ b/bbcfont/bbcsansbold.css
@@ -1,8 +1,7 @@
 @font-face {
-  font-family: 'BBC Reith Sans Bold';
+  font-family: 'BBCReithSans';
   src:
     url('https://dperika.github.io/bbcfont/BBCReithSansCd_A_Bd.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
-
