--- a/bbcfont/bbcsansbold.css
+++ b/bbcfont/bbcsansbold.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'BBCReithSans';
+  font-family: 'BBCReithSans Bold';
   src:
     url('https://dperika.github.io/bbcfont/BBCReithSansCd_A_Bd.ttf') format('truetype');
   font-weight: normal;
