--- a/bbcfont/bbcsansbold.css
+++ b/bbcfont/bbcsansbold.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: 'BBC Reith Sans Bold';
   src:
-    url('https://dperika.github.io/bbcfont/BBCReithSansCd_A_Bd.ttf') format('truetype');
+    url('https://dperika.github.io/bbcfont/BBCReithSansCd_A_Bd.ttf') format('truetype'),
+    url('https://dperika.github.io/bbcfont/BBCReithSansCd_W_Bd.woff') format('woff'),
+    url('https://dperika.github.io/bbcfont/BBCReithSansCd_W_Bd.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
